--- a/elements/pageloader.html
+++ b/elements/pageloader.html
@@ -1,7 +1,7 @@
 ---
 title: Page loader
-layout: default
-doc-tab: bulma-extensions
+layout: documentation
+doc-tab: elements
 doc-subtab: pageloader
 npm-version: 0.0.3
 variables:
@@ -9,11 +9,11 @@ variables:
   value: 1
 ---
 
+{% include subnav-elements.html %}
+
 {% capture pageloader_example %}
 <div class="pageloader"><span class="title">Pageloader</span></div>
 {% endcapture %}
-
-{% include_relative subnav-bulma-extensions.html %}
 
 <section class="section">
   <div class="container">
@@ -58,7 +58,7 @@ variables:
         <button id="showPageloader" class="button is-primary">Show Page-loader (3 sec only)</button>
       </div>
       <div class="column">
-        {% highlight html %}{{pageloader_example}}{% endhighlight %}
+        {% highlight html %}{{}}{% endhighlight %}
       </div>
     </div>
 
