--- a/elements/pageloader.html
+++ b/elements/pageloader.html
@@ -58,7 +58,7 @@ variables:
         <button id="showPageloader" class="button is-primary">Show Page-loader (3 sec only)</button>
       </div>
       <div class="column">
-        {% highlight html %}{{}}{% endhighlight %}
+        {% highlight html %}{{pageloader_example}}{% endhighlight %}
       </div>
     </div>
 
