--- a/related-projects.html
+++ b/related-projects.html
@@ -6,9 +6,11 @@ doc-tab: overview
 doc-subtab: related-projects
 projects:
 - name: Bulma.io-axure
-  readme: https://raw.githubusercontent.com/Wikiki/bulma-extensions/master/README.md
+  link: https://github.com/Code-Mine-Development/Bulma.io-axure/
+  readme: Bulma.io-axure.md
 - name: Laravel 5.5.x Front-end Preset For Bulma
-  readme: https://github.com/laravel-frontend-presets/bulma/blob/master/README.md
+  link: https://github.com/laravel-frontend-presets/bulma
+  readme: LaravelFrontendPresets.md
 ---
 
 {% include navbar.html id="Index" fixed=true has_container=true boxed=true transparent=true %}
