Add tagsinput and restructure folders

--- a/form/iconpicker.html
+++ b/form/iconpicker.html
@@ -96,4 +96,4 @@ let iconPickerOptions = {
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url}}/assets/js/iconPicker.js"></script>
+<script type="text/javascript" src="{{ site.url}}/js/iconPicker.js"></script>
