--- a/form/tagsinput.html
+++ b/form/tagsinput.html
@@ -14,7 +14,7 @@ npm-version: 0.1.0
 {% endcapture %}
 
 {% capture tagsinput_js %}
-<script type="text/javascript" src="./js/iconPicker.js"></script>
+<script type="text/javascript" src="./tagsinput.js"></script>
 {% endcapture %}
 
 <section class="section">
