--- a/elements/badge.html
+++ b/elements/badge.html
@@ -190,14 +190,14 @@ variables:
     {% include snippet.html content=badge_example size="one-half" %}
 
     {% include anchor.html name="Colors" %}
-    {% include snippet.html content=badge_colors_example size="one-half" %}
+    {% include snippet.html content=badge_colors_example size="one-half" more=true %}
 
     {% include anchor.html name="Sized" %}
-    {% include snippet.html content=badge_sizes_example size="one-half" %}
+    {% include snippet.html content=badge_sizes_example size="one-half" more=true %}
 
     {% include anchor.html name="Styles" %}
     <h4 class="subtitle">You can display an outlined badge by using <code>.is-badge-outlined</code> modifier.</h4>
-    {% include snippet.html content=badge_outlined_example size="one-half" %}
+    {% include snippet.html content=badge_outlined_example size="one-half" more=true %}
 
     {% include variables.html %}
   </div>
