--- a/form/checkradio.html
+++ b/form/checkradio.html
@@ -435,12 +435,12 @@ variables:
 
     <hr>
 
-    {% include snippet.html content=checkradio_example size="one-third" %}
+    {% include snippet.html content=checkradio_example size="one-third" more=true %}
 
     <hr>
     <p>Use <code>is-rtl</code> to display a right-to-left design of checkbox or radio (text at left)</p>
     <br />
-    {% include snippet.html content=checkradio_rtl_example size="one-third" %}
+    {% include snippet.html content=checkradio_rtl_example size="one-third" more=true %}
 
     <div class="has-text-centered has-text-danegr">
       <p>Don't forget to set <code>id</code> attribute on input and <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
@@ -452,12 +452,12 @@ variables:
     </div>
 
     {% include anchor.html name="Colors" %}
-    {% include snippet.html content=checkbox_colors_example size="one-third" %}
-    {% include snippet.html content=radio_colors_example size="one-third" %}
+    {% include snippet.html content=checkbox_colors_example size="one-third" more=true %}
+    {% include snippet.html content=radio_colors_example size="one-third" more=true %}
 
     {% include anchor.html name="Sizes" %}
-    {% include snippet.html content=checkbox_sizes_example size="one-third" %}
-    {% include snippet.html content=radio_sizes_example size="one-third" %}
+    {% include snippet.html content=checkbox_sizes_example size="one-third" more=true %}
+    {% include snippet.html content=radio_sizes_example size="one-third" more=true %}
 
     <hr>
 
@@ -465,31 +465,31 @@ variables:
     <h4 class="subtitle">Circle</h4>
     <p>You can add <code>is-circle</code> modifier to the input to get a rounded checkbox</p>
     <br />
-    {% include snippet.html content=checkradio_colors_circle_example size="one-third" %}
+    {% include snippet.html content=checkradio_colors_circle_example size="one-third" more=true %}
 
     <h4 class="subtitle">Block</h4>
     <p>You can add <code>is-block</code> modifier to the input to get a full colored checkbox</p>
     <br />
-    {% include snippet.html content=checkradio_block_colors_example size="one-third" %}
+    {% include snippet.html content=checkradio_block_colors_example size="one-third" more=true %}
 
     <h4 class="subtitle">No border</h4>
     <p>Adding <code>has-no-border</code> modifier to the input will remove the checkbox border</p>
     <br />
-    {% include snippet.html content=checkbox_noborder_example size="one-third" %}
-    {% include snippet.html content=radio_noborder_example size="one-third" %}
+    {% include snippet.html content=checkbox_noborder_example size="one-third" more=true %}
+    {% include snippet.html content=radio_noborder_example size="one-third" more=true %}
 
     <h4 class="subtitle">Background colored</h4>
     <p>You can add <code>has-background-color</code> modifier to the input to get the checkbox background color impacted</p>
     <br />
-    {% include snippet.html content=checkbox_backgroundColor_example size="one-third" %}
-    {% include snippet.html content=radio_backgroundColor_example size="one-third" %}
+    {% include snippet.html content=checkbox_backgroundColor_example size="one-third" more=true %}
+    {% include snippet.html content=radio_backgroundColor_example size="one-third" more=true %}
 
     <hr>
 
     <h3 class="title">States</h3>
     <h4 class="subtitle">Disabled</h4>
-    {% include snippet.html content=checkradio_disabled_example size="one-third" %}
-    {% include snippet.html content=checkradio_indeterminate_example size="one-third" %}
+    {% include snippet.html content=checkradio_disabled_example size="one-third" more=true %}
+    {% include snippet.html content=checkradio_indeterminate_example size="one-third" more=true %}
 
     {% include variables.html %}
   </div>
