--- a/form/switch.html
+++ b/form/switch.html
@@ -285,12 +285,12 @@ variables:
 
     <hr>
 
-    {% include snippet.html content=switch_example size="one-third" %}
+    {% include snippet.html content=switch_example size="one-third" more=true %}
 
     <hr>
     <p>Use <code>is-rtl</code> to display a right-to-left design of checkbox (text at left)</p>
     <br />
-    {% include snippet.html content=switch_rtl_example size="one-third" %}
+    {% include snippet.html content=switch_rtl_example size="one-third" more=true %}
 
     <div class="has-text-centered has-text-danegr">
       <p>Don't forget to set <code>id</code> attribute on input and <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
@@ -302,31 +302,31 @@ variables:
     </div>
 
     {% include anchor.html name="Colors" %}
-    {% include snippet.html content=switch_colors_example size="one-third" %}
+    {% include snippet.html content=switch_colors_example size="one-third" more=true %}
 
     {% include anchor.html name="Sizes" %}
-    {% include snippet.html content=switch_sizes_example size="one-third" %}
+    {% include snippet.html content=switch_sizes_example size="one-third" more=true %}
 
     <hr>
 
     <h3 class="title">Styles</h3>
     <h4 class="subtitle">Thin</h4>
-    {% include snippet.html content=switch_thin_colors_example size="one-third" %}
+    {% include snippet.html content=switch_thin_colors_example size="one-third" more=true %}
 
     <h4 class="subtitle">Rounded</h4>
-    {% include snippet.html content=switch_rounded_example size="one-third" %}
+    {% include snippet.html content=switch_rounded_example size="one-third" more=true %}
 
     <h4 class="subtitle">Outlined</h4>
-    {% include snippet.html content=switch_outlined_example size="one-third" %}
+    {% include snippet.html content=switch_outlined_example size="one-third" more=true %}
 
     <h4 class="subtitle">Mixed</h4>
-    {% include snippet.html content=switch_rounded_outlined_example size="one-third" %}
+    {% include snippet.html content=switch_rounded_outlined_example size="one-third" more=true %}
 
     <hr>
 
     <h3 class="title">States</h3>
     <h4 class="subtitle">Disabled</h4>
-    {% include snippet.html content=switch_colors_disabled_example size="one-third" %}
+    {% include snippet.html content=switch_colors_disabled_example size="one-third" more=true %}
 
     {% include variables.html %}
   </div>
