--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ sass bulma-pricingtable.sass
             <li>In the same folder create a new file <code>_all.sass</code> (this is not required, but will help when you add more extensions)</li>
             <li>In this file add this code:
     {% highlight sass %}
-    @charset "utf-8"
-    @import "{% highlight bash %}@import 'bulma.sass';
+@charset "utf-8"
+@import 'bulma.sass';
 @import 'checkradio.sass'
     {% endhighlight %}</li>
           </ul>
