--- a/form/tagsinput.html
+++ b/form/tagsinput.html
@@ -84,4 +84,4 @@ npm-version: 0.1.6
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url}}/js/tagsinput.js"></script>
+<script type="text/javascript" src="{{ site.url}}/js/tagsinput.min.js"></script>
