Update carousel doc

--- a/form/tagsinput.html
+++ b/form/tagsinput.html
@@ -4,13 +4,13 @@ description: Modernize an add interaction on input of tags type
 layout: documentation
 doc-tab: form
 doc-subtab: tagsinput
-npm-version: 0.1.8
+npm-version: 0.2.0
 ---
 
 {% include subnav-form.html %}
 
 {% capture tagsinput_example %}
-<input class="input" type="tags" placeholder="Tags input" value="Tag1,Tag2,Tag3">
+<input class="input" type="tags" placeholder="Add Tag" value="Tag1,Tag2,Tag3">
 {% endcapture %}
 
 {% capture tagsinput_js %}
