--- a/elements/pageloader.html
+++ b/elements/pageloader.html
@@ -3,7 +3,7 @@ title: Page loader
 layout: documentation
 doc-tab: elements
 doc-subtab: pageloader
-npm-version: 0.1.0
+npm-version: 0.1.1
 variables:
 - name: $pageloader-opacity
   value: 1
@@ -13,6 +13,14 @@ variables:
 
 {% capture pageloader_example %}
 <div class="pageloader"><span class="title">Pageloader</span></div>
+{% endcapture %}
+
+{% capture pageloader2_example %}
+<div class="pageloader is-right-to-left"><span class="title">Pageloader</span></div>
+{% endcapture %}
+
+{% capture pageloader3_example %}
+<div class="pageloader is-left-to-right"><span class="title">Pageloader</span></div>
 {% endcapture %}
 
 <section class="section">
@@ -55,36 +63,55 @@ variables:
 
     <div class="columns">
       <div class="column">
-        <button id="showPageloader" class="button is-primary">Show Page-loader (3 sec only)</button>
+        <button data-target="pageloader" class="button is-primary">Show Page-loader (3 sec only)</button>
       </div>
       <div class="column">
         {% highlight html %}{{pageloader_example}}{% endhighlight %}
       </div>
     </div>
 
+    <div class="columns">
+      <div class="column">
+        <button data-target="pageloader2" class="button is-primary">Show Page-loader from right</button>
+      </div>
+      <div class="column">
+        {% highlight html %}{{pageloader2_example}}{% endhighlight %}
+      </div>
+    </div>
+
+    <div class="columns">
+      <div class="column">
+        <button data-target="pageloader3" class="button is-primary">Show Page-loader from left</button>
+      </div>
+      <div class="column">
+        {% highlight html %}{{pageloader3_example}}{% endhighlight %}
+      </div>
+    </div>
+
     {% include variables.html %}
 
-    <div class="pageloader"><span class="title">Pageloader</span></div>
+    <div id="pageloader" class="pageloader"><span class="title">Pageloader</span></div>
+    <div id="pageloader2" class="pageloader is-right-to-left"><span class="title">Pageloader</span></div>
+    <div id="pageloader3" class="pageloader is-left-to-right"><span class="title">Pageloader</span></div>
   </div>
 </section>
 
 <script>
-var $button = Array.prototype.slice.call(document.querySelectorAll('#showPageloader'), 0);
-var $pageloader = Array.prototype.slice.call(document.querySelectorAll('.pageloader'), 0);
+var buttons = document.querySelectorAll('button[data-target]');
 
 // Check if there are any nav burgers
-  if ($button.length > 0 && $pageloader.length > 0) {
+[].forEach.call(buttons, function(button) {
+  button.addEventListener('click', function(e) {
+    e.preventDefault();
 
-    // Add a click event on each of them
-    $button.forEach(function ($el) {
-      $el.addEventListener('click', function() {
-        $pageloader[0].classList.toggle('is-active');
-        var pageloaderTimeout = setTimeout( function() {
-          $pageloader[0].classList.toggle('is-active');
-          clearTimeout( pageloaderTimeout );
-        }, 3000 );
-
-      } );
-    });
-  }
+    var pageloader = document.getElementById(e.currentTarget.dataset.target);
+    if (pageloader) {
+      pageloader.classList.toggle('is-active');
+      var pageloaderTimeout = setTimeout( function() {
+        pageloader.classList.toggle('is-active');
+        clearTimeout(pageloaderTimeout);
+      }, 3000 );
+    }
+  } );
+});
 </script>
