--- a/form/iconpicker.html
+++ b/form/iconpicker.html
@@ -96,4 +96,4 @@ let iconPickerOptions = {
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url}}/js/iconPicker.min.js"></script>
+<script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-iconpicker/dist/bulma-iconpicker.min.js"></script>
