--- a/form/slider.html
+++ b/form/slider.html
@@ -259,6 +259,6 @@ document.addEventListener( 'DOMContentLoaded', function () {
 
     {% include variables.html %}
 
-    <script type="text/javascript" src="{{ site.url }}/js/slider.js"></script>
+    <script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-slider/dist/bulma-slider.js"></script>
   </div>
 </section>
