--- a/form/tagsinput.html
+++ b/form/tagsinput.html
@@ -84,4 +84,4 @@ npm-version: 0.2.0
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url}}/js/tagsinput.min.js"></script>
+<script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-tagsinput/dist/bulma-tagsinput.min.js"></script>
