--- a/index.html
+++ b/index.html
@@ -145,11 +145,24 @@ sass bulma-pricingtable.sass
       </div>
     </article>
 
+    {% include anchor.html name="Development" %}
+    <div class="content">
+      gulp
+      gulp:build:styles
+      gulp:build:scripts --jsFormat umd --babelTarget "latest 2 versions"
+      gulp build
+      gulp changelog
+      gulp release --type patch|minor|major
+      gulp npm:publish
+    </div>
+
     {% include anchor.html name="Need an extension ?" %}
     <div class="content">
       <p>You are looking for a specific extension but you did not find it yet ?</p>
       <p>Don't hesitate to send me a request by <a href="https://github.com/Wikiki/bulma-extensions/issues" target="_blank">opening and issue</a> on my GitHub repository.</p>
     </div>
 
+
+or using npm run build
   </div>
 </section>
